# elq

./: LICENSE  README.md
.github/workflows/: ci.yml  promote.yml  release.yml
conformance/: cases.json
python/: README.md  pyproject.toml
python/ellio_elq/: __init__.py  builder.py  fields_generated.py  quote.py
python/tests/: test_conformance.py  test_metadata_generated.py  test_quote.py  test_validation.py
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: builder.ts  fields.generated.ts  index.ts  quote.ts
typescript/test/: ambient.d.ts  conformance.test.ts  metadata.generated.test.ts  quote.test.ts
