# The version value is stamped from elq_sdk/VERSION by elq_sdk/generator;
# everything else in this manifest is hand-maintained.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ellio-elq"
version = "0.1.2"
description = "Query builder for ELQ, the ELLIO Search API query language"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ELLIO Technology" }]

[tool.setuptools]
packages = ["ellio_elq"]

[project.urls]
Repository = "https://github.com/ELLIO-Technology/elq"
Documentation = "https://docs.ellio.tech/threat-intel/elq"
